force-app/main/default/objects/Schedule_booking__c/Schedule_booking__c.object-meta.xml
<CustomObject>
    <label>Schedule booking</label>
    <nameField>
        <displayFormat>PO# {00000000}</displayFormat>
        <label>Schedule booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>