force-app/main/default/objects/Schedule_booking__c/fields/Booking_name__c.field-meta.xml
<CustomField>
    <fullName>Booking_name__c</fullName>
    <displayFormat>PO# {00000000}</displayFormat>
    <label>Booking name</label>
    <type>AutoNumber</type>
</CustomField>