force-app/main/default/objects/Schedule_booking__c/fields/Declared_Teu__c.field-meta.xml
<CustomField>
    <fullName>Declared_Teu__c</fullName>
    <label>Declared Teu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>