force-app/main/default/objects/Schedule_booking__c/fields/Type_of_goods__c.field-meta.xml
<CustomField>
    <fullName>Type_of_goods__c</fullName>
    <label>Type of goods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Textile</fullName>
            </value>
            <value>
                <fullName>Fragile</fullName>
            </value>
            <value>
                <fullName>Dangerous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>