force-app/main/default/objects/Schedule_booking__c/validationRules/Cant_Book_after_departure.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Book_after_departure</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(),  Schedule__r.Departure_date__c &lt;= TODAY() )</errorConditionFormula>
    <errorMessage>You cannot place a booking after the departure date!</errorMessage>
</ValidationRule>