force-app/main/default/objects/Schedule_booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Declared_Teu__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Schedule__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>